fix period filter highlighting on click and bug with Custom period visibility

--- a/src/screens/DashboardPage/components/Header/styles.scss
+++ b/src/screens/DashboardPage/components/Header/styles.scss
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow: visible;
     z-index: 100;
   }
 
